convert a file path in command line arg to url. fix  opening command line urls when loading tab state. macos was not opening saved state when passing a url on the command line AND no windows were open.